# kylin-user-guide

./: .gitignore  CMakeLists.txt  README.md
data/guide-ubuntukylin/biometric-manager/en_US/: index.md
data/guide-ubuntukylin/biometric-manager/zh_CN/: index.md
data/guide-ubuntukylin/burner/en_US/: index.md
data/guide-ubuntukylin/burner/zh_CN/: index.md
data/guide-ubuntukylin/eom/en_US/: index.md
data/guide-ubuntukylin/eom/zh_CN/: index.md
data/guide-ubuntukylin/hot-key/: hot-key
data/guide-ubuntukylin/hot-key/en_US/: index.md
data/guide-ubuntukylin/hot-key/zh_CN/: index.md
data/guide-ubuntukylin/indicator-china-weather/en_US/: index.md
data/guide-ubuntukylin/indicator-china-weather/zh_CN/: index.md
data/guide-ubuntukylin/kylin-assistant/en_US/: index.md
data/guide-ubuntukylin/kylin-assistant/zh_CN/: index.md
data/guide-ubuntukylin/kylin-video/en_US/: index.md
data/guide-ubuntukylin/kylin-video/zh_CN/: index.md
data/guide-ubuntukylin/kylinOS/en_US/: index.md
data/guide-ubuntukylin/kylinOS/zh_CN/: index.md
data/guide-ubuntukylin/peony/en_US/: index.md
data/guide-ubuntukylin/peony/zh_CN/: index.md
data/guide-ubuntukylin/technical-assistance/en_US/: index.md
data/guide-ubuntukylin/technical-assistance/zh_CN/: index.md
data/guide-ubuntukylin/tools/en_US/: index.md
data/guide-ubuntukylin/tools/zh_CN/: index.md
data/guide-ubuntukylin/ubuntu-kylin-software-center/en_US/: index.md
data/guide-ubuntukylin/ubuntu-kylin-software-center/zh_CN/: index.md
data/guide-ubuntukylin/ukui-control-center/en_US/: index.md
data/guide-ubuntukylin/ukui-control-center/zh_CN/: index.md
data/guide-ubuntukylin/ukui/en_US/: index.md
data/guide-ubuntukylin/ukui/zh_CN/: index.md
data/guide-ubuntukylin/ukui3.0/zh_CN/: index.md
data/guide/audacious/en_US/: index.md
data/guide/audacious/zh_CN/: index.md  音乐播放器.docx
data/guide/audio-recorder/en_US/: index.md
data/guide/audio-recorder/zh_CN/: index.md  音频录制器.docx
data/guide/biometric-manager/en_US/: index.md
data/guide/biometric-manager/zh_CN/: index.md
data/guide/blueman-manager/zh_CN/: index.md  蓝牙管理器.docx
data/guide/box-manager/en_US/: index.md
data/guide/box-manager/zh_CN/: index.md
data/guide/boxmanage/zh_CN/: index.md
data/guide/brasero/en_US/: index.md
data/guide/brasero/zh_CN/: index.md  光盘刻录器.docx
data/guide/burner/en_US/: index.md
data/guide/caja --no-desktop --browser/zh_CN/: index.md
data/guide/caja/en_US/: index.md
data/guide/caja/zh_CN/: index.md  文件浏览器.docx
data/guide/cheese/zh_CN/: index.md  茄子摄像头.docx
data/guide/claws-mail/en_US/: index.md
data/guide/claws-mail/zh_CN/: index.md
data/guide/engrampa/en_US/: index.md
data/guide/engrampa/zh_CN/: index.md  归档管理器.docx
data/guide/eom/en_US/: index.md
data/guide/eom/zh_CN/: index.md
data/guide/faq/en_US/: index.md
data/guide/faq/zh_CN/: index.md
data/guide/filezilla/en_US/: index.md
data/guide/filezilla/zh_CN/: FTP客户端.docx  index.md
data/guide/game/en_US/: index.md
data/guide/game/zh_CN/: index.md
data/guide/gparted-pkexec/zh_CN/: index.md  分区编辑器.docx
data/guide/gparted/en_US/: index.md
data/guide/gparted/zh_CN/: index.md
data/guide/hot-key/en_US/: index.md
data/guide/hot-key/zh_CN/: index.md  麒麟快捷键.docx
data/guide/indicator-china-weather/zh_CN/: index.md
data/guide/ksc-defender/en_US/: index.md
data/guide/ksc-defender/zh_CN/: index.md
data/guide/kybackup/en_US/: index.md
data/guide/kybackup/zh_CN/: index.md
data/guide/kydroid/en_US/: index.md
data/guide/kydroid/zh_CN/: index.md
data/guide/kydroid2/zh_CN/: index.md  银河麒麟安卓兼容环境V2.docx
data/guide/kylin-assistant/en_US/: index.md
data/guide/kylin-assistant/zh_CN/: index.md
data/guide/kylin-control-center /zh_CN/: index.md  控制面板.docx
data/guide/kylin-control-center/en_US/: index.md
data/guide/kylin-control-center/zh_CN/: index.md
data/guide/kylin-ipmsg/en_US/: index.md
data/guide/kylin-ipmsg/zh_CN/: index.md  麒麟传书.docx
data/guide/kylin-os-installer/en_US/: index.md
data/guide/kylin-os-installer/zh_CN/: index.md
data/guide/kylin-software-center/en_US/: index.md
data/guide/kylin-software-center/zh_CN/: index.md
data/guide/kylin-update-manager/zh_CN/: index.md  麒麟更新管理器.docx
data/guide/kylin-video/en_US/: index.md
data/guide/kylin-video/zh_CN/: index.md  麒麟影音.docx
data/guide/kylinOS/en_US/: index.md
data/guide/kylinOS/zh_CN/: index.md
data/guide/kysec-ui-pkexec/en_US/: index.md
data/guide/kysec-ui-pkexec/zh_CN/: index.md  麒麟安全管理工具.docx
data/guide/mate-calc/zh_CN/: MATE计算器.docx  index.md
data/guide/mate-terminal/en_US/: index.md
debian/: changelog  control  control.1604  copyright  install  kylin-user-guide-common.install  kylin-user-guide-daemon.desktop  kylin-user-guide.desktop  kylin-user-guide.install  manpages  rules  version  version.in  watch
doc/: .~帮助手册对应表.xlsx  .~开发记录.docx  develope-record.docx  manuel-correspond.xlsx  【初】麒麟影音产品说明书.docx  分类  帮助手册对应表.xlsx  帮助手册文档.dot  帮助手册框架.docx  开发记录.docx  无标题文档  银河麒麟软件商店3.0用户手册.doc  麒麟备份还原工具.docx  麒麟备份还原工具0106.docx  麒麟影音帮助手册.docx
doc/design/: lanhuapp_link
icon/: CMakeLists.txt
man/: kylin-user-guide.1  user-guide-daemon.1
src/: CMakeLists.txt  Makefile  aboutwidget.cpp  aboutwidget.h  guide-widget.cpp  guide-widget.h  kylin-user-guide.pro  kylin-user-guide.qrc  main.cpp  main_controller.cpp  main_controller.h  xatom-helper.cpp  xatom-helper.h
src/common-tool/: comm_func.cpp  comm_func.h
src/daemon/: CMakeLists.txt  daemon-main.cpp  daemon_main_controller.cpp  daemon_main_controller.h
src/daemon/ipc/: daemon_ipc_dbus.cpp  daemon_ipc_dbus.h
src/data/: kylin-user-guide-daemon.desktop  kylin-user-guide.desktop
src/ipc/: ipc_dbus.cpp  ipc_dbus.h
src/test/: index.html
src/test/css/: component.css
src/translation/: kylin-user-guide_en_US.ts  kylin-user-guide_zh_CN.qm  kylin-user-guide_zh_CN.ts
src/web/: content.html  index-ubuntukylin.html  index-ubuntukylin_en_US.html  index.html  index_en_US.html
src/web/css/: guide-black.css  guide-white.css  guide.css
src/web/js/: guide.js  readme
src/web/js/lib/: package-lock.json
(+38 files in other folders)
