## Installation
install(FILES 22x22/kylin-user-guide.png DESTINATION /usr/share/icons/hicolor/22x22/apps/kylin-user-guide.png)
install(FILES 32x32/kylin-user-guide.png DESTINATION /usr/share/icons/hicolor/32x32/apps/kylin-user-guide.png)
install(FILES 56x56/kylin-user-guide.png DESTINATION /usr/share/icons/hicolor/56x56/apps/kylin-user-guide.png)
